SERVER-73125: Set built-in variables on ExpressionContext of the validator